# working_days_scaler

./: Cargo.toml  README.md  build.rs  holidays.csv
.github/workflows/: release.yml
.github/workflows/scripts/: pre_build.sh
proto/: externalscaler.proto
src/: handler.rs  holidays_loader.rs  main.rs  working_days.rs
tests_resources/: invalid_date_holidays.csv  small_holidays.csv
