[package]
name = "working_days_scaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
thiserror = "1.0.37"
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.1.6"
chrono = "0.4.22"

[build-dependencies]
tonic-build = "0.8.2"
